# Pen-Portfolio

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
embeddings/: Dockerfile  README.md  embeddings.py  pyproject.toml
embeddings/chroma_db/: chroma.sqlite3
embeddings/helpers/: chromadb.py  file_parser.py  scraper.py
mcp-backend/: README.md  main.py  pen.db  pyproject.toml
mcp-backend/core/: config.py
mcp-backend/endpoints/v1/: client.py
mcp-backend/helpers/: agent.py  database.py  mcp.py
mcp-backend/models/: response.py
mcp-backend/tests/: test.rest
mcp-frontend/: Dockerfile  package-lock.json  package.json
mcp-frontend/src/app/: globals.css  layout.tsx  page.tsx
mcp-frontend/src/app/chat/: layout.tsx  page.tsx
mcp-frontend/src/app/chat/manage-documents/: page.tsx
mcp-frontend/src/components/: AppSidebar.tsx  MainChat.tsx
mcp-frontend/src/contexts/: ChatContext.tsx  HttpProvider.tsx  ToastContext.tsx
