[project]
name = "embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.4",
    "crawl4ai>=0.6.0",
    "fastmcp[http]>=3.1.1",
    "langchain-text-splitters>=1.1.1",
    "mcp[cli]>=1.26.0",
    "pdfminer-six>=20260107",
]
